# routes/api/users.js
@@ -62,8 +62,8 @@ router.put(
 );
 
 router.patch('/location', asyncHandler(auth), asyncHandler(users.updateLocation));
-router.post('/:user_email/follow', asyncHandler(auth), asyncHandler(users.followUser))
-router.delete('/:user_email/unfollow', asyncHandler(auth), asyncHandler(users.unfollowUser))
+router.post('/:userId/follow', asyncHandler(auth), asyncHandler(users.followUser))
+router.delete('/:userId/unfollow', asyncHandler(auth), asyncHandler(users.unfollowUser))
 
 router.post('/logout', asyncHandler(auth), asyncHandler(users.logout));
 
